--- a/Project_S/backend/package.json
+++ b/Project_S/backend/package.json
@@ -1,4 +1,8 @@
 {
+  "scripts": {
+    "dev":"node src/app.js",
+    "build": "npm i"
+  },
   "dependencies": {
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
