--- a/Project_S/backend/package.json
+++ b/Project_S/backend/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "dev":"node src/app.js",
+    "dev": "node src/app.js",
     "build": "npm i"
   },
   "dependencies": {
@@ -11,6 +11,7 @@
     "mongodb": "^3.1.10",
     "mongoose": "^5.13.20",
     "multer": "^1.4.1",
+    "path": "^0.12.7",
     "sharp": "^0.32.1",
     "validator": "^10.9.0"
   }
